--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "next": "16.0.1",
+    "zustand": "^4.4.0",
+    "react-hook-form": "^7.45.0",
+    "@hookform/resolvers": "^3.3.1",
+    "yup": "^1.3.0",
+    "react-quill": "^2.0.0",
+    "quill": "^1.3.7"
   },
   "devDependencies": {
     "typescript": "^5",
