--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1",
-    "zustand": "^4.4.0",
-    "react-hook-form": "^7.45.0",
-    "@hookform/resolvers": "^3.3.1",
-    "yup": "^1.3.0",
-    "react-quill": "^2.0.0",
-    "quill": "^1.3.7"
+    "react-hook-form": "^7.66.0",
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
